--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -36,3 +36,14 @@ jobs:
           curl -X POST --user "$BOT_USERNAME:$BOT_PASSWORD" \
             -d "action=purge&titles=Template:Infobox/VTShopStock&format=json" \
             "https://insaniquarium.fandom.com/api.php"
+      - name: Update keepalive timestamp
+        if: github.event.schedule == '0 0 * * 1'
+        run: |
+          git config --global user.name "wiki-bot"
+          git config --global user.email "bot@example.com"
+          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} temprepo
+          cd temprepo
+          date > .keepalive
+          git add .keepalive
+          git commit -m "Keepalive update"
+          git push
